--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-center p-10">기도합시다</h1>
-    <div id="root"></div>
+    <h1 class="text-3xl font-bold underline text-center p-5">기도합시다</h1>
+    <section class="m-5">
+      <button class="m-3 w-7 h-7 bg-blue-500 rounded-lg text-gray-50 hover:bg-blue-700" id="add-person-button">
+        +
+      </button>
+      <div id="app"></div>
+    </section>
   </body>
 </html>
