:hammer: people에서 사용하는 id 변수 이름 nextId로 변경

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   </head>
   <body>
     <h1 class="text-3xl font-bold underline text-center p-5">기도합시다</h1>
-    <section class="m-5">
-      <button class="m-3 w-7 h-7 bg-blue-500 rounded-lg text-gray-50 hover:bg-blue-700" id="add-person-button">
+    <section class="my-5 mx-10">
+      <div id="app"></div>
+      <button
+        class="my-5 mx-auto w-full h-10 bg-blue-500 rounded-lg text-gray-50 hover:bg-blue-700"
+        id="add-person-button"
+      >
         +
       </button>
-      <div id="app"></div>
     </section>
   </body>
 </html>
