--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>기도합시다</title>
+    <title>기도🙏</title>
     <link href="/dist/output.css" rel="stylesheet" />
     <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-center p-5">기도합시다</h1>
+    <h1 class="text-3xl font-bold text-center p-5">기도🙏</h1>
     <section class="my-5 mx-10">
       <div id="app"></div>
       <button
@@ -19,5 +19,30 @@
         +
       </button>
     </section>
+    <div
+      class="absolute flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
+      id="add-person-modal-background"
+    >
+      <div class="bg-white rounded-lg w-96 flex-col shadow-2xl" id="add-person-modal">
+        <h3 class="py-2 rounded-t-lg text-center text-2xl text-gray-200 bg-blue-500">기도할 사람 추가</h3>
+        <form class="m-5" id="add-person-form">
+          <input
+            class="border-2 border-blue-500 rounded-sm w-full h-10 p-5"
+            placeholder="이름을 입력해주세요."
+            id="add-person-input"
+          />
+          <div class="flex justify-between mt-4">
+            <button
+              class="rounded-lg py-2 px-4 bg-red-500 text-gray-50 hover:bg-red-700"
+              type="reset"
+              id="add-person-cancel-button"
+            >
+              취소
+            </button>
+            <button class="rounded-lg py-2 px-4 bg-blue-500 text-gray-50 hover:bg-blue-700" type="submit">확인</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
