--- a/index.html
+++ b/index.html
@@ -44,5 +44,46 @@
         </form>
       </div>
     </div>
+    <div
+      class="absolute flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
+      id="edit-pray-modal-background"
+    >
+      <div class="bg-white rounded-lg w-96 flex-col shadow-2xl" id="edit-pray-modal">
+        <h3 class="py-2 rounded-t-lg text-center text-2xl text-gray-200 bg-blue-500">기도제목 수정</h3>
+        <div class="flex justify-between px-5 pt-5">
+          <h5 class="text-lg" id="edit-pray-name"></h5>
+          <button
+            type="button"
+            id="edit-pray-reset"
+            class="border-2 border-blue-500 rounded-lg w-20 h-8 font-bold text-blue-500"
+          >
+            초기화
+          </button>
+        </div>
+
+        <form class="p-5" id="edit-pray-form">
+          <div class="max-h-56 overflow-y-auto" id="edit-pray-input-box"></div>
+          <div class="flex justify-center">
+            <button
+              type="button"
+              id="add-pray-button"
+              class="border-2 border-blue-500 rounded-full w-8 h-8 text-blue-500 font-bold mt-3"
+            >
+              +
+            </button>
+          </div>
+          <div class="flex justify-between mt-3">
+            <button
+              class="rounded-lg py-2 px-4 bg-red-500 text-gray-50 hover:bg-red-700"
+              type="reset"
+              id="edit-pray-cancel-button"
+            >
+              취소
+            </button>
+            <button class="rounded-lg py-2 px-4 bg-blue-500 text-gray-50 hover:bg-blue-700" type="submit">확인</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
