--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
     </section>
     <div
-      class="absolute flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
+      class="fixed flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
       id="add-person-modal-background"
     >
       <div class="bg-white rounded-lg w-96 flex-col shadow-2xl" id="add-person-modal">
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div
-      class="absolute flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
+      class="fixed flex hidden justify-center items-center top-0 w-full h-full bg-gray-800 bg-opacity-75"
       id="edit-pray-modal-background"
     >
       <div class="bg-white rounded-lg w-96 flex-col shadow-2xl" id="edit-pray-modal">
