--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>기도🙏</title>
     <link href="dist/output.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
+    <script src="https://kit.fontawesome.com/a7b433808c.js" crossorigin="anonymous"></script>
     <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold text-center p-5">기도🙏</h1>
+    <h1 class="text-3xl font-bold text-center p-5 pb-0">기도🙏</h1>
+    <button class="copy-button absolute top-5 right-10 text-2xl">
+      <i class="far fa-copy"></i>
+    </button>
     <section class="my-5 mx-10">
       <div id="app"></div>
       <button
