--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold text-center p-5 pb-0">기도🙏</h1>
+    <h1 class="room-name text-3xl font-bold text-center p-5 pb-0">기도🙏</h1>
     <button class="copy-button absolute top-5 right-10 text-2xl">
       <i class="far fa-copy"></i>
     </button>
