:sparkles: 클립보드 복사 버튼 javascript로  추가

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <button class="copy-button absolute top-5 right-10 text-2xl">
-      <i class="far fa-copy"></i>
-    </button>
-    <section class="my-5 mx-10">
+    <section class="mx-10">
       <div id="app"></div>
     </section>
     <div
